--- a/c2c/src/main/resources/application.properties
+++ b/c2c/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 server.port=8080
 
+elasticsearch.host=localhost
+elasticsearch.port=9200
+
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/mydb
 spring.datasource.username=root
