--- a/c2c/pom.xml
+++ b/c2c/pom.xml
@@ -56,6 +56,21 @@
       <artifactId>mysql-connector-j</artifactId>
       <version>8.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>2.16.0-rc1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.16.0-rc1</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-annotations</artifactId>
+      <version>2.16.0-rc1</version>
+    </dependency>
   </dependencies>
 
   <build>
