codigo para poblar base de datos e interfaz algo funcional

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,20 @@
   "configurations": [
     {
       "type": "java",
+      "name": "poblardb",
+      "request": "launch",
+      "mainClass": "com.backend.poblardb",
+      "projectName": "backend"
+    },
+    {
+      "type": "java",
+      "name": "prueba",
+      "request": "launch",
+      "mainClass": "com.backend.prueba",
+      "projectName": "backend"
+    },
+    {
+      "type": "java",
       "name": "App",
       "request": "launch",
       "mainClass": "com.backend.App",
@@ -15,7 +29,8 @@
       "mainClass": "com.backend.App",
       "projectName": "backend",
       "args": "",
-      "envFile": "${workspaceFolder}/.env"
+      "envFile": "${workspaceFolder}/.env",
+      "vmArgs": " -Dcom.sun.management.jmxremote -Dcom.sun.management.jmxremote.port=50682 -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.ssl=false -Dspring.jmx.enabled=true -Djava.rmi.server.hostname=localhost -Dspring.application.admin.enabled=true -Dspring.boot.project.name=backend"
     }
   ]
 }
