--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -76,7 +76,11 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.16.0-rc1</version>
     </dependency>
-    
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20231013</version>
+    </dependency>
   </dependencies>
 
   <build>
